<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="Math" Id="{f7786396-9a58-47a9-ac25-a7dfc7443020}">
    <Declaration><![CDATA[TYPE
    Math :
    STRUCT
        Sinus : LREAL;
		NegativeSinus : LREAL;
		
		Cosinus : LREAL;
		Tangent : LREAL;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>